# wildboar-lem-in

./: CMakeLists.txt  Makefile  add.c  adj_list_pseudo_constructor.c  arr_path.c  bag.h  check_prog_input.c  data_dtor.c  del_list.c  del_list2.c  delete_arrs.c  delete_bag.c  delete_bag_2.c  delete_bag_iterator.c  delete_data.c  err_println.c  err_println_str.c  forwarding.c  ft_adj_list.h  ft_stack_itoa.c  has_next.c  indir_graph.c  is_empty.c  lem_in.h  list_priority_push.c  main.c  new.h  new_bag.c  new_bag_iterator.c  next.c  routing.c  size.c  st_bag_copy_assign.c  st_bag_ctor.c  st_bag_dtor.c  st_bag_dtor_2.c  t_st_bag_iterator_ctor.c  t_st_bag_iterator_dtor.c  test_main.c
bfs/: bfs.c  bfs.h  bfs_ctor.c  bfs_ctor_multi.c  bfs_data_init.c  bfs_dist_to.c  bfs_dtor.c  bfs_has_path_to.c  bfs_path_to.c  bfs_validate_vertex.c  delete_bfs.c  new_bfs.c  new_bfs_multi.c
dfs/: depth_first_search.h  has_path_to.c  new_dfs_data.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
graph/: add_edge.c  add_vertex.c  adj.c  alloc_array.c  check_input_data.c  check_verticies.c  check_verticies_messages.c  delete_array2d.c  delete_dfs_data.c  delete_graph.c  delete_graph_2.c  delete_line.c  delete_stack.c  depth_first_search.h  dfs_ctor.c  dfs_dtor.c  get_number.c  graph.h  graph_ctor_in.c  graph_ctor_in.h  graph_dtor.c  graph_dtor_2.c  graph_init.c  has_path_to.c  is_number.c  line_analisys.c  mark_end.c  mark_start.c  new_dfs_data.c  new_graph.c  new_stack.c  parse_line.c  peek.c  pop.c  push.c  stack.h  stack_ctor.c  stack_dtor.c  stack_is_empty.c  to_string.c  (+1 more)
libft/: Makefile  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c
maps/: subject3.map  subject4.map
queue/: delete_queue.c  dequeue.c  enqueue.c  new_queue.c  peek.c  queue.h  queue_ctor.c  queue_dtor.c  queue_is_empty.c  queue_peek.c  stack_is_empty.c
stack/: stack.h  stack_dtor.c
